# AI-Powered-Pull-Request-Review

./: .dockerignore  DEPLOYMENT.md  README.md  TECHNICAL_BLOG.md  docker-compose.yml  pyproject.toml
docker/: docker-compose.yml
docker/git_worker/: Dockerfile
docker/llm_worker/: Dockerfile
docker/orchestrator/: Dockerfile
docker/rabbitmq/: Dockerfile
docker/radis/: Dockerfile
docker/webhook/: Dockerfile
notes/: git_worker.txt  llm_worker.txt  orchestrator.txt  webhook_server.txt
scripts/: simulate_webhook.py
services/: constants.py
services/git_worker/: config.py  main.py  models.py  queue_manager.py  workflow.py
services/git_worker/git_operations/: base_ops.py  github_ops.py  gitlab_ops.py
services/git_worker/utils/: logging_utils.py
services/llm_worker/: config.py  conversation_manager.py  main.py  models.py  queue_manager.py  workflow.py
services/llm_worker/llms/: anthropic_client.py  factory.py  ollama_client.py  open_ai_client.py
services/llm_worker/prompts/: prompt_builder.py  prompt_registry.py  reviewer_prompt.py
services/llm_worker/utils/: logging_utils.py
services/orchestrator/: config.py  main.py  models.py  queue_manager.py  state.py
services/orchestrator/code_parser/: tree_sitter_parser.py
services/orchestrator/git_operation/: __init__.py  base_ops.py  github_ops.py  gitlab_ops.py
services/orchestrator/utils/: filter_utils.py  hunk_processor.py  semantic_filter.py
services/webhook/: config.py  main.py  queue_manager.py  utils.py
services/webhook/api/: github_api.py  (+1 more)
tests/: test_orchestrator.py  test_webhook.py
(+12 files in other folders)
