[project]
name = "AI-Powered-Pull-Request-Review"
version = "0.1.0"
description = "Ai-Powered pull request reviewer"
authors = [
    {name = "Lakhan", email = "Lakhan4797@gmail.com"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
