[project]
name = "AI-Powered-Pull-Request-Review"
version = "0.1.0"
description = "Ai-Powered pull request reviewer"
authors = [
    {name = "Lakhan", email = "Lakhan4797@gmail.com"},
]
dependencies = [
    "fastapi>=0.128.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.11.0",
    "requestor>=0.1.1",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-ruby",
    "tree-sitter-rust"
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
